# API_Scanner

./: .env.example  .gitignore  AGENTS.md  AI_ANALYSIS.md  AI_CHAT_GUIDE.md  AI_CHAT_HTTP_TRAFFIC.md  API_Scanner.postman_collection.json  CACHE_BUG_FIX.md  CLAUDE.md  CURL_COMMANDS.md  DOCUMENTATION.md  DUPLICATE_ENDPOINT_FIX.md  HTTP_REQUESTS_README.md  INSTALLATION_GUIDE.md  LICENSE  PROJECT_DOCUMENTATION.md  QUICK_START.md  README.en.md  README.md  TESTING.md  api_requests.http  api_server.py  app.py  check_db_tables.py  docker-run.sh  docker-stop.sh  generate_curl_and_docs.py  generate_http_requests.py  ground_truth.json  main.py  migrate_add_request_response_fields.py  pyproject.toml  requirements.txt  requirements_new.txt  rest-client.settings.json  route_api_discovery.py  route_api_discovery_ctk.py  route_api_discovery_qt.py  run-ai-comparison-test-app2-debug.bat  run-ai-comparison-test-app2.bat  (+10 more)
.claude/: settings.local.json
GUI/: __init__.py  launcher.py
accuracy/: accuracy_report.txt  endpoints.txt  endpoints_3files.txt  measure_accuracy.py  scan_result.txt
comparison/: DB_SAVE_FIX.md  DIRECTORY_SETUP.md  README.md  compare_ai_accuracy.py  quick_compare.py  run-comparison.bat  test_comparison_system.py
config/: config.yaml
data/: scanner.db
scripts/: check_db.py  compare_ai_vs_noai.py  count_js_direct.py  extract_endpoints.py  extract_specific_files.py  migrate_db.py  migrate_discovered_paths.py  test.py
src/: __init__.py
test-app/: Dockerfile  actual_endpoints.txt  app.py  app_improved.py  app_realistic.py  improved_scan_comparison.txt  (+3 more)
(+150 files in other folders)
