[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "route-api-discovery"
version = "0.1.0"
description = "URL에서 JavaScript를 수집하고 페이지 경로와 API 엔드포인트를 탐색하는 도구"
requires-python = ">=3.10"
dependencies = [
  "customtkinter>=5.2,<6",
  "PySide6>=6.8,<7",
]
authors = [
  { name = "Codex" }
]

[project.scripts]
route-api-discovery-gui = "app:main"

[tool.setuptools]
packages = ["GUI"]
py-modules = ["app", "route_api_discovery", "route_api_discovery_ctk", "route_api_discovery_qt"]
